Changes in 4.0.0 Beta 6

1)  Validate the DISPOSITION in /etc/shorewall/maclist entries.

2)  Add versioning to capabilities files.

3)  Improve compiler selection.

4)  DYNAMIC_ZONES=Yes and bridges.

Changes in 4.0.0 Beta 5

1)  Fix undefined function call when both an input interface and an
    output interface are present.

2)  Externalize compiler and Compile.pm.

Changes in 4.0.0 Beta 4

1)  Fix the 'Modules' output of 'dump'

2)  Fix FW=xxx with IPSECFILE=ipsec.

3)  Fix wildcard-rule/NONE-policy interaction.

4)  Clean up generation of user-exit jacket functions.

5)  Add new bridge code.

6)  Fix bad bug in exclusion.

Changes in 4.0.0 Beta 2

1)  Fix screwup in get_routed_networks().

2)  Some minor tweaks.

3)  Fix synflood chain jumps.

4)  Simplify synflood handling and improve error diagnostics.

Changes in 4.0.0 Beta 1

1)  Fix add/delete <interface>.

2)  Fix do_proto() and 'use IPConfig' in Providers.pm.

3)  Implement dynamic host group detection.

Changes in 3.9.7

1)  Clean up release notes.

2)  Fix several bugs having to do with exclusion in the hosts file.

3)  Use '-m addrtype' in detectnet interface output rules.

4)  Fix find_hosts_by_option().

5)  Fix more hosts file bugs.

6)  Fix 'detect' in GATEWAY column of providers file.

8)  Other bug fixes (see release notes).

7)  Fix action in 'logreject'.

8)  Allow macros to invoke macros outside of action bodies.


Changes in 3.9.6

1)  Fix parsing problems in protocol handling.

2)  Fix bugs in handling of the MARK column.

3)  Fix bug in routing table copying

4)  Fix bug in ipset handling.

5)  Fix bug in handling of CONTINUE in the tcrules file.

6)  Add RCP_COMMAND and RSH_COMMAND options in shorewall.conf

7)  Apply Luigi's MARK patch.

Changes in 3.9.5

1)  Fix dynamic zone problem.

2)  Fix LOGALLNEW.

3)  Implement log level, protocol and port validation.

4)  Fix MACLIST log rule generation problem.

Changes in 3.9.4

1)  Fix port 0 problem (again!).

2)  Fix log_martians.
