@@ -33,6 +33,12 @@ VERBOSITY=1
 SHOREWALL_COMPILER=
 
 ###############################################################################
+#                      C O M P I L E R   O P T I O N S
+###############################################################################
+
+VALIDATE_PORTS=Yes
+
+###############################################################################
 #			       L O G G I N G
 ###############################################################################
 
