@@ -8,6 +8,8 @@ Changes in 4.0.0 Beta 6
 
 4)  DYNAMIC_ZONES=Yes and bridges.
 
+5)  Implement VALIDATE_PORTS
+
 Changes in 4.0.0 Beta 5
 
 1)  Fix undefined function call when both an input interface and an
